Reduce h3 font on small devices to prevent overspill

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -166,6 +166,7 @@ img {
     h3 {
         width: 300px;
         margin: 10px auto;
+        font-size: 36px;
     }        
 
     .flash-message {
